# node-webp

./: .eslintrc.js  .gitattributes  .gitignore  .npmignore  CMakeLists.txt  license  package.json  readme.md
.github/workflows/: build.yml
scripts/: benchmark.js  install.js
source/: decode.spec.js  encode.spec.js  index.d.ts  index.js
source/native/: decode.cpp  decode.hpp  decoder.cpp  decoder.hpp  encode.cpp  encode.hpp  encoder.cpp  encoder.hpp  format.hpp  image.cpp  image.hpp  main.cpp
test/: 511x511.rgba  511x511.yuv  512x512.rgba  512x512.yuv
